:bug: fix navigation overflow

--- a/css/main.css
+++ b/css/main.css
@@ -306,8 +306,9 @@ img {
     }
 
     .navbar .navigation {
+        background-color: transparent;
         display: grid;
-        font-size: 1.2rem;
+        font-size: clamp(0.8rem, 2vh, 1.2rem);
         grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
         position: static;
         text-align: right;
@@ -330,7 +331,7 @@ img {
     }
 
     /*---DESKTOP TABLE---*/
-    .table {
+    .table {    
         background-color: var(--off-white);
         display: table;
     }
